// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Autocomplete
    classes={
      Object {
        "autoComplete": "autoComplete",
        "droplist": "droplist",
      }
    }
    disableAutoComplete={false}
    droplistProps={
      Object {
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
      }
    }
    textfieldProps={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <UNDEFINED
          autoFocus={false}
          clear={false}
          counter={false}
          disabled={false}
          hjWhitelist={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClear={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onRef={[Function]}
          options={Array []}
          selectOnFocus={false}
          type="text"
          valueProp=""
        />,
        null,
      ],
      "className": "autoComplete",
      "id": undefined,
      "style": undefined,
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "autoFocus": false,
          "clear": false,
          "counter": false,
          "disabled": false,
          "hjWhitelist": true,
          "onBlur": [Function],
          "onChange": [Function],
          "onClear": [Function],
          "onFocus": [Function],
          "onKeyUp": [Function],
          "onRef": [Function],
          "options": Array [],
          "selectOnFocus": false,
          "type": "text",
          "valueProp": "",
        },
        "ref": null,
        "rendered": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": Object {
            "autoFocus": false,
            "clear": false,
            "counter": false,
            "disabled": false,
            "hjWhitelist": true,
            "options": Array [],
            "selectOnFocus": false,
            "type": "text",
            "valueProp": "",
          },
          "propTypes": Object {
            "alignRight": [Function],
            "allowError": [Function],
            "assistiveText": [Function],
            "autoFocus": [Function],
            "className": [Function],
            "clear": [Function],
            "counter": [Function],
            "disableAutoComplete": [Function],
            "disabled": [Function],
            "error": [Function],
            "guide": [Function],
            "hjWhitelist": [Function],
            "iconName": [Function],
            "id": [Function],
            "input": [Function],
            "inputClassName": [Function],
            "label": [Function],
            "lockHeight": [Function],
            "mask": [Function],
            "maxLength": [Function],
            "meta": [Function],
            "name": [Function],
            "onBlur": [Function],
            "onChange": [Function],
            "onClear": [Function],
            "onFocus": [Function],
            "onKeyUp": [Function],
            "options": [Function],
            "placeholder": [Function],
            "regex": [Function],
            "required": [Function],
            "selectOnFocus": [Function],
            "style": [Function],
            "type": [Function],
            "valueProp": [Function],
          },
          "render": [Function],
        },
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <UNDEFINED
            autoFocus={false}
            clear={false}
            counter={false}
            disabled={false}
            hjWhitelist={true}
            onBlur={[Function]}
            onChange={[Function]}
            onClear={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            onRef={[Function]}
            options={Array []}
            selectOnFocus={false}
            type="text"
            valueProp=""
          />,
          null,
        ],
        "className": "autoComplete",
        "id": undefined,
        "style": undefined,
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "autoFocus": false,
            "clear": false,
            "counter": false,
            "disabled": false,
            "hjWhitelist": true,
            "onBlur": [Function],
            "onChange": [Function],
            "onClear": [Function],
            "onFocus": [Function],
            "onKeyUp": [Function],
            "onRef": [Function],
            "options": Array [],
            "selectOnFocus": false,
            "type": "text",
            "valueProp": "",
          },
          "ref": null,
          "rendered": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "autoFocus": false,
              "clear": false,
              "counter": false,
              "disabled": false,
              "hjWhitelist": true,
              "options": Array [],
              "selectOnFocus": false,
              "type": "text",
              "valueProp": "",
            },
            "propTypes": Object {
              "alignRight": [Function],
              "allowError": [Function],
              "assistiveText": [Function],
              "autoFocus": [Function],
              "className": [Function],
              "clear": [Function],
              "counter": [Function],
              "disableAutoComplete": [Function],
              "disabled": [Function],
              "error": [Function],
              "guide": [Function],
              "hjWhitelist": [Function],
              "iconName": [Function],
              "id": [Function],
              "input": [Function],
              "inputClassName": [Function],
              "label": [Function],
              "lockHeight": [Function],
              "mask": [Function],
              "maxLength": [Function],
              "meta": [Function],
              "name": [Function],
              "onBlur": [Function],
              "onChange": [Function],
              "onClear": [Function],
              "onFocus": [Function],
              "onKeyUp": [Function],
              "options": [Function],
              "placeholder": [Function],
              "regex": [Function],
              "required": [Function],
              "selectOnFocus": [Function],
              "style": [Function],
              "type": [Function],
              "valueProp": [Function],
            },
            "render": [Function],
          },
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`Autocomplete styles matches the snapshot 1`] = `
Object {
  "autoComplete": Object {
    "position": "relative",
  },
  "droplist": Object {
    "left": 0,
    "position": "absolute",
    "top": [Function],
    "width": "100%",
    "zIndex": 2,
  },
}
`;

exports[`AutocompleteJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UNDEFINED
    droplistProps={
      Object {
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
      }
    }
    items={
      Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": Object {
      "$$typeof": Symbol(react.context),
      "_calculateChangedBits": null,
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": Object {
          "$$typeof": Symbol(react.provider),
          "_context": [Circular],
        },
        "_calculateChangedBits": null,
        "_currentRenderer": Object {},
        "_currentRenderer2": null,
        "_currentValue": Object {
          "classNamePrefix": "",
          "disableStylesGeneration": false,
        },
        "_currentValue2": Object {
          "classNamePrefix": "",
          "disableStylesGeneration": false,
        },
        "_threadCount": 0,
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": Object {
        "$$typeof": Symbol(react.context),
        "_calculateChangedBits": null,
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": Object {},
          "_currentRenderer2": null,
          "_currentValue": Object {
            "classNamePrefix": "",
            "disableStylesGeneration": false,
          },
          "_currentValue2": Object {
            "classNamePrefix": "",
            "disableStylesGeneration": false,
          },
          "_threadCount": 0,
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
